fix: fixes spacing

--- a/src/assets/scss/pages/_viewscan.scss
+++ b/src/assets/scss/pages/_viewscan.scss
@@ -179,6 +179,10 @@
     @media (min-width: 1024px) {
       display: none;
     }
+
+    .arrow-container {
+      margin-right: 2.5%;
+    }
   }
 
   .payment-method {
